kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: kong
        image: kong:2.6.0  # Specify a specific version of the Kong image
        resources:
          requests:
            memory: "256Mi"  # Increase resource requests if needed
            cpu: "100m"
          limits:
            memory: "512Mi"  # Increase resource limits if needed
            cpu: "500m"
        ports:
        - containerPort: 8000
        - containerPort: 8443
        - containerPort: 8001
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
      volumes:
      - name: nginx-config
        persistentVolumeClaim:
          claimName: kong-nginx-config
